--- a/styles.css
+++ b/styles.css
@@ -26,8 +26,8 @@ a {
 .nav-header .logo {
   text-transform: capitalize;
   color: #fff;
-  font-size: 1.8rem;
-  font-family: cursive;
+  font-size: 2rem;
+  font-family: "Leckerli One", cursive;
 }
 nav ul {
   list-style: none;
@@ -224,7 +224,7 @@ nav ul li {
   top: 100%;
 }
 .footer p {
-  font-size: 1rem;
+  font-size: 0.8rem;
   color: #acacac;
 }
 .waiting {
@@ -507,5 +507,8 @@ nav ul li {
   .section-center .title {
     font-size: 1.2rem;
     max-width: 180px;
+  }
+  .footer p {
+    font-size: 0.7rem;
   }
 }
