--- a/styles.css
+++ b/styles.css
@@ -157,7 +157,7 @@ nav ul li {
   margin-right: 1rem;
   margin-bottom: 2rem;
   padding: 1rem 0.5rem;
-  height: 445px;
+  /* height: 445px; */
   height: auto;
 }
 .food-container:hover {
@@ -214,7 +214,7 @@ nav ul li {
 }
 
 .footer {
-  width: 100vw;
+  width: 100%;
   text-align: center;
   line-height: 20vh;
   background-color: #333;
@@ -259,7 +259,7 @@ nav ul li {
 }
 .waiting-text-search {
   color: rgb(77, 77, 77);
-  margin-top: 2rem;
+  margin: 2rem 0;
   text-align: center;
   font-weight: 600;
 }
@@ -414,8 +414,12 @@ nav ul li {
     font-size: 20px;
     display: inline-block;
   }
+  .nav-container {
+    position: relative;
+    overflow: hidden;
+  }
   nav {
-    position: absolute;
+    position: fixed;
     background-color: rgb(63, 63, 63);
     top: 0;
     right: -100%;
@@ -487,8 +491,12 @@ nav ul li {
     width: 100%;
     text-align: center;
   }
+  .container {
+    justify-content: center;
+  }
   .food-container {
-    flex-basis: 80%;
+    flex-basis: 100%;
+    margin-right: 0;
   }
   .content {
     font-size: 0.8rem;
