--- a/styles.css
+++ b/styles.css
@@ -10,14 +10,13 @@ body {
   background-color: #ede5df;
   min-height: 100vh;
   position: relative;
-  /* height: 1000vh; */
 }
 .top {
   position: fixed;
   bottom: 8vh;
   right: 20px;
   z-index: 12;
-  border-radius: 50%;
+  border-radius: 30%;
   color: white;
   height: 40px;
   width: 40px;
@@ -27,6 +26,7 @@ body {
   background-color: #ff9100;
   outline: none;
   cursor: pointer;
+  box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.192);
   animation: bounce 1s ease infinite;
 }
 
@@ -146,7 +146,7 @@ nav ul li {
   background-color: #ff9100;
   color: #fff;
   text-transform: capitalize;
-  font-weight: 600;
+  font-weight: 500;
   display: inline-block;
   border: none;
   height: 100%;
@@ -272,13 +272,12 @@ nav ul li {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  margin-bottom: 1rem;
 }
 
 .preloader {
   position: relative;
   overflow: hidden;
-  /* background-color: red; */
-  /* margin-bottom: 12rem; */
 }
 .preloader img {
   width: 120px;
@@ -296,13 +295,13 @@ nav ul li {
 .waiting-text {
   color: rgb(77, 77, 77);
   transform: translateY(-30px);
-  font-weight: 600;
+  font-weight: 500;
 }
 .waiting-text-search {
   color: rgb(77, 77, 77);
   margin: 1.5rem 0;
   text-align: center;
-  font-weight: 600;
+  font-weight: 500;
   display: block;
 }
 .waiting-icon {
@@ -319,7 +318,27 @@ nav ul li {
     left: 100%;
   }
 }
-
+.load-more-btn {
+  background-color: #ff9100;
+  color: #fff;
+  outline: none;
+  border: none;
+  font-weight: 500;
+  display: block;
+  border-radius: 5px;
+  height: 100%;
+  padding: 6px 10px;
+  cursor: pointer;
+  margin: auto;
+  font-family: Poppins, sans-serif;
+  display: none;
+}
+.load-more-btn:hover {
+  background-color: #ec8c0e;
+}
+.show-load {
+  display: block;
+}
 /* -------- about page -------- */
 
 .content {
@@ -404,7 +423,7 @@ nav ul li {
   background-color: #ff9100;
   color: #fff;
   text-transform: capitalize;
-  font-weight: 600;
+  font-weight: 500;
   border: none;
   padding: 6px 8px;
   cursor: pointer;
