--- a/styles.css
+++ b/styles.css
@@ -157,7 +157,7 @@ nav ul li {
   text-align: center;
   text-transform: uppercase;
   cursor: pointer;
-  box-shadow: 0 0 10px 0 rgb(0, 0, 0, 0.5);
+  box-shadow: 0 0 10px 0 rgba(97, 31, 31, 0.3);
   font-family: Poppins, sans-serif;
 }
 .banner .explore-btn:hover {
@@ -371,6 +371,7 @@ nav ul li {
   }
 }
 .load-more-btn {
+  box-shadow: 2px 2px 10px rgba(70, 15, 15, 0.3);
   background-color: #ff9100;
   color: #fff;
   outline: none;
@@ -395,6 +396,7 @@ nav ul li {
 
 .content {
   color: #666666;
+  font-size: 1rem;
   line-height: 1.8rem;
 }
 .sub-section {
