--- a/styles.css
+++ b/styles.css
@@ -115,6 +115,7 @@ nav ul li {
 .banner {
   height: 70vh;
   padding: 25px;
+  background-color: #444;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url(./images/bg-5.jpg);
   background-position: center;
