--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,9 @@
   box-sizing: border-box;
   scroll-behavior: smooth;
 }
-
+html {
+  -webkit-tap-highlight-color: transparent;
+}
 body {
   font-family: Poppins, sans-serif;
   background-color: #ede5df;
