--- a/styles.css
+++ b/styles.css
@@ -374,24 +374,23 @@ nav ul li {
   }
 }
 .load-more-btn {
-  box-shadow: 2px 2px 10px rgba(70, 15, 15, 0.3);
-  background-color: #ff9100;
-  color: #fff;
+  box-shadow: 2px 2px 10px rgba(70, 15, 15, 0.2);
+  text-shadow: 0px 0px 1px rgba(70, 15, 15, 0.2);
+  /* background-color: #ff9100; */
+  color: #ff9100;
   outline: none;
-  border: none;
+  border: 2px solid #ff9100;
   font-weight: 500;
   display: block;
   border-radius: 5px;
   height: 100%;
-  padding: 6px 10px;
+  padding: 10px 15px;
   cursor: pointer;
   margin: auto;
   font-family: Poppins, sans-serif;
   display: none;
 }
-.load-more-btn:hover {
-  background-color: #ec8c0e;
-}
+
 .show-load {
   display: block;
 }
