--- a/styles.css
+++ b/styles.css
@@ -311,16 +311,37 @@ nav ul li {
 .footer {
   width: 100%;
   text-align: center;
-  line-height: 20vh;
+  /* line-height: 20vh; */
   background-color: #333;
   height: 20vh;
-
-  position: sticky;
-  top: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 20px;
 }
 .footer p {
   font-size: 0.8rem;
   color: #acacac;
+}
+.footer-social {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  /* flex-direction: column; */
+}
+.footer-links {
+  text-decoration: none;
+  display: inline-block;
+  color: #acacac;
+  border: 1px solid #acacac;
+  text-align: center;
+  line-height: 35px;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+}
+.footer-links:hover {
+  background-color: rgb(43, 43, 43);
 }
 .waiting {
   display: flex;
@@ -400,6 +421,7 @@ nav ul li {
   color: #666666;
   font-size: 1rem;
   line-height: 1.8rem;
+  margin-bottom: 15px;
 }
 .sub-section {
   margin-bottom: 3.8rem;
@@ -639,10 +661,6 @@ nav ul li {
   }
   .contact-box {
     flex-basis: 100%;
-  }
-  .footer {
-    position: sticky;
-    top: 100%;
   }
 }
 @media screen and (max-width: 500px) {
