--- a/styles.css
+++ b/styles.css
@@ -317,7 +317,7 @@ nav ul li {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 20px;
+  gap: 30px;
 }
 .footer p {
   font-size: 0.8rem;
@@ -410,6 +410,7 @@ nav ul li {
   margin: auto;
   font-family: Poppins, sans-serif;
   display: none;
+  background: none;
 }
 
 .show-load {
