--- a/styles.css
+++ b/styles.css
@@ -313,11 +313,12 @@ nav ul li {
   text-align: center;
   /* line-height: 20vh; */
   background-color: #333;
-  height: 20vh;
+  height: 35vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 30px;
+  gap: 40px;
+  margin-top: 40px;
 }
 .footer p {
   font-size: 0.8rem;
